ready to deploy

--- a/src/blocks/card/__like-button/card__like-button.css
+++ b/src/blocks/card/__like-button/card__like-button.css
@@ -1,8 +1,12 @@
+.card__like {
+  position: relative;
+}
+
 .card__like-button {
+  position: relative;
   width: 21px;
   height: 18px;
   background: transparent url('../../../images/like-inactive.svg') no-repeat;
-  
   background-size: 21px 18px;
   border: none;
   cursor: pointer;
@@ -17,4 +21,29 @@
 
 .card__like-button:hover {
   opacity: 0.6;
+}
+
+.card__like-button_has-like {
+  transform: translateY(-3px);
+}
+
+.card__like-counter {
+  display: block;
+  color: #000;
+  visibility: hidden;
+  opacity: 0;
+  font-family: Inter, sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 15.73px;
+  position: absolute;
+  left: 50%;
+  bottom: calc(-100% + 10px);
+  transform: translateX(-50%);
+  transition: visibility 0s, opacity .3s;
+}
+
+.card__like-counter_visible {
+  visibility: visible;
+  opacity: 1;
 }
