--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -11,12 +11,19 @@
   border-radius: 2px;
   border: none;
   transition: visibility 0s, background 0.3s;
-  margin-top: 48px;
+  margin-top: 23px;
 }
 
 .popup__button:hover {
   background: rgba(0, 0, 0, 0.8);
   cursor: pointer;
+}
+
+.popup__button_disabled {
+  background: #fff;
+  color: #c4c4c4;
+  border: 1px solid #c4c4c4;
+  pointer-events: none;
 }
 
 @media screen and (max-width: 568px) {
