--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,12 +1,44 @@
-.profile__image {
+.profile__image-wrapper {
   width: 120px;
   height: 120px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
-  background-size: cover;
-  background-position: center;
   margin: 0 29px 0 0;
+  cursor: pointer;
+  overflow: hidden;
+  position: relative;
+  background-color: #000;
+}
+
+.profile__image-wrapper::before {
+  content: url(../../../images/edit-icon.svg);
+  position: absolute;
+  inset: 50%;
+  width: 26px;
+  height: 26px;
+  opacity: 0;
+  visibility: hidden;
+  transform: translate(-50%, -50%);
+  transition: visibility 0s ease .3s, opacity 0.3s ease;
+}
+
+.profile__image-wrapper:hover::before {
+  opacity: 1;
+  visibility: visible;
+  transition: visibility 0s ease 0s, opacity 0.3s ease;
+}
+
+.profile__image-wrapper:hover .profile__image {
+  opacity: 0.2;
+}
+
+.profile__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  transition: opacity 0.3s ease;
 }
 
 @media screen and (max-width: 740px) {
